--- a/frontend/src/containers/Container_CSS/NewCalendar.css
+++ b/frontend/src/containers/Container_CSS/NewCalendar.css
@@ -202,6 +202,10 @@ main {
 
 }
 
+.calendar .body {
+  background-color: var(--border-color);
+}
+
 /* this is for the date time for week calendar */
 .calendarContainer .flex-container .timecol .body .cell:first-child{
   border-top: 1px solid var(--border-color);
@@ -554,6 +558,7 @@ to make it adjustable */
   grid-template-rows: 23.5px 23.5px 23.5px 23.5px 23.5px 23.5px;
   grid-auto-flow: dense;
   grid-row-gap: 2px;
+  grid-column-gap: 1px;
   border-bottom: 1px solid var(--border-color);
   border-right: 1px solid var(--border-color);
 }
@@ -606,7 +611,9 @@ to make it adjustable */
 .calendar .body .row .calendarNum {
   grid-row-start: 1;
   text-align: right;
-  /* background-color: red; */
+  background-color: white;
+  border-right: 1px solid var(--border-color);
+  height: 151px;
 }
 
 
