--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -73,7 +73,7 @@
 
 
   /* how everything is formatted in the post */
-  margin-bottom: 10px;
+  margin-bottom: 50px;
   padding-bottom: 12px;
   padding-left: 32px;
   padding-right: 12px;
@@ -82,6 +82,11 @@
   width: 700px;
   word-wrap: break-word;
   border-radius: 25px;
+
+
+
+
+  padding-bottom: 30;
 
 }
 
