got the event spanning for day, now to fix size of cal

--- a/frontend/src/containers/Container_CSS/NewCalendar.css
+++ b/frontend/src/containers/Container_CSS/NewCalendar.css
@@ -214,7 +214,7 @@ main {
   /* background-color: black; */
 }
 
-.calendar .daybody .dayEvent{
+.calendar .dayBody .eventsDay{
   background-color: lightblue;
 }
 
@@ -778,5 +778,5 @@ to make it adjustable */
 
 .calendar .sidepanel .sidecell{
   border-bottom: 3px solid var(--border-color);
-  height: 10em;
+  height: 104px;
 }
