--- a/frontend/src/components/SideMenu/SideMenu.css
+++ b/frontend/src/components/SideMenu/SideMenu.css
@@ -1,7 +1,7 @@
 #components-layout-demo-custom-trigger .trigger {
   font-size: 18px;
   line-height: 64px;
-  padding: 0 24px;
+  padding: 0 24;
   cursor: pointer;
   transition: color 0.3s;
 }
@@ -11,7 +11,7 @@
 }
 
 #components-layout-demo-custom-trigger .logo {
-  height: 32px;
+  height: 632px;
   background: rgba(255, 255, 255, 0.2);
   margin: 16px;
 }
