--- a/frontend/src/containers/Layouts/Layouts.css
+++ b/frontend/src/containers/Layouts/Layouts.css
@@ -20,7 +20,7 @@
   position: relative;
   top: 0px;
   /* background-color: red; */
-  /* overflow: hidden; */ 
+  overflow: hidden; 
   height: 980px;
 }
 
