--- a/frontend/src/containers/Container_CSS/NewCalendar.css
+++ b/frontend/src/containers/Container_CSS/NewCalendar.css
@@ -131,6 +131,14 @@ main {
   border-color: darkgrey;
 }
 
+.dayFlex-Container{
+  display: flex;
+  overflow: auto;
+  height: 780px;
+  border-top: 2px solid;
+  border-color: darkgrey;
+  width: 1500px;
+}
 
 .row {
   margin: 0;
@@ -210,12 +218,23 @@ main {
 
 }
 
+.dayFlex-Container .timecol{
+  width: 50px;
+  float: left;
+  position:relative;
+  top: 40px;
+  /* background-color: red; */
+
+}
+
 /* This is for the side bars tabs in the PersonalCalendar */
 .flex-container .sidecol .sideBar{
   display: flex;
+  position:relative;
   flex-direction: column;
   justify-content: space-between;
   height: 10px;
+  bottom: 15px;
 
 }
 
@@ -242,10 +261,12 @@ main {
 }
 
 .calendar .dayBody {
+  position: relative;
   display: grid;
-  grid-template-rows: repeat(48, 50px);
-  grid-row-gap: 2px;
-  /* background-color: black; */
+  grid-template-rows: repeat(48, 24px);
+  grid-row-gap: 1px;
+  top: -1200px;
+  /* background-color: red; */
 }
 
 .calendar .dayBody .eventsDay{
@@ -271,6 +292,18 @@ main {
   /* background-color: blue; */
 }
 
+.calendarContainer .dayFlex-Container .timecol .body .cell{
+  position: relative;
+  height: 50px;
+  border-top: 1px solid var(--border-color);
+  overflow: hidden;
+  cursor: pointer;
+  transition: 0.25s ease-out;
+  width: 70px;
+  /* background-color: blue; */
+}
+
+
 .calendarContainer .weekDayFlex-Container .timecol .body .cell .number{
   font-size: 82.5%;
   line-height: 1;
@@ -279,6 +312,13 @@ main {
   font-weight: 10;
 }
 
+.calendarContainer .dayFlex-Container .timecol .body .cell .number{
+  font-size: 82.5%;
+  line-height: 1;
+  top: .75em;
+  right: .75em;
+  font-weight: 10;
+}
 
 /* Calendar */
 /* this will help control the width of the calendar */
@@ -291,7 +331,7 @@ main {
 .calendar {
   display: block;
   position: relative;
-  width: 90%;
+  width: 100%;
   background: var(--neutral-color);
   border: 1px solid var(--border-color);
 }
@@ -309,7 +349,7 @@ main {
 .calendar .header {
   text-transform: uppercase;
   font-weight: 100;
-  font-size: 125%;
+  font-size: 100%;
   padding: 1.5em 0;
   /* border-bottom: 1px solid var(--border-color); */
   /* background-color: blue; */
@@ -319,11 +359,11 @@ main {
 .weekCalendar .header {
   text-transform: uppercase;
   font-weight: 100;
-  font-size: 125%;
+  font-size: 100%;
   padding: 1.5em 0;
   /* border-bottom: 1px solid var(--border-color); */
   /* background-color: blue; */
-  width: 600px;
+  width: 700px;
 }
 
 .calendar .header .icon {
@@ -389,6 +429,20 @@ main {
   border-bottom: 1px solid var(--border-color);
   border-right: 1px solid var(--border-color);
   width: 1470px;
+  /* background-color: red; */
+}
+
+.weekCalendar .dayDays {
+  font-weight: 100;
+  color: ;
+  font-size: 100%;
+  height: 44px;
+  /* padding: .75em 0; */
+  border-top: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--border-color);
+  border-right: 1px solid var(--border-color);
+  width: 1470px;
+  /* background-color: red; */
 }
 
 .calendar .body .row .cell {
@@ -646,9 +700,9 @@ main {
 }
 
 /* This is for the day view */
-.calendar .body .daycell {
+.calendar .backDayBody .daycell {
   position: relative;
-  height: 10em;
+  height: 50px;
   border-top: 1px solid var(--border-color);
   border-right: 1px solid var(--border-color);
   overflow: hidden;
