--- a/frontend/src/containers/Layouts/Layouts.css
+++ b/frontend/src/containers/Layouts/Layouts.css
@@ -17,11 +17,11 @@
 }
 
 .site-layout{
-  position: relative;
-  top: 0px;
+  /* position: relative; */
+  /* top: 0px; */
   /* background-color: red; */
-  overflow: hidden; 
-  height: 980px;
+  /* overflow: hidden; */
+  /* height: 980px; */
 }
 
 .site-layout .site-layout-background {
