--- a/frontend/src/containers/Layouts/Layouts.css
+++ b/frontend/src/containers/Layouts/Layouts.css
@@ -21,7 +21,7 @@
   /* top: 0px; */
   /* background-color: red; */
   /* overflow: hidden; */
-  /* height: 980px; */
+  height: 1300px;
 }
 
 .site-layout .site-layout-background {
