got the time drop down for the time picker

--- a/frontend/src/containers/Container_CSS/NewCalendar.css
+++ b/frontend/src/containers/Container_CSS/NewCalendar.css
@@ -265,6 +265,12 @@ main {
 
 }
 
+.flex-container .sidecol .sideBar .holder .tabs:hover{
+  background: lightgrey;
+  transition: 0.2 ease-in;
+}
+
+
 .calendar .body {
   background-color: var(--border-color);
 }
