seperation of component posting in newsfeed

--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -1,5 +1,12 @@
 /* http://jsfiddle.net/zbt5L1wp/4/ */
 
+.blueColor{
+  background-color:blue-6;
+}
+
+
+
+
 
 .cardborder {
   border-radius: 25px;
