--- a/frontend/src/components/SideMenu/SideMenu.css
+++ b/frontend/src/components/SideMenu/SideMenu.css
@@ -12,12 +12,12 @@
 
 #components-layout-demo-custom-trigger .logo {
   height: 632px;
-  background: rgba(255, 255, 255, 0.2);
+
   margin: 16px;
 }
 
-.site-layout .site-layout-background {
-  background: #fff;
+backgroundColorHeader {
+
 }
 
 
