--- a/frontend/src/components/labelCSS/ReactForm.css
+++ b/frontend/src/components/labelCSS/ReactForm.css
@@ -11,6 +11,8 @@
   border-bottom: 2px solid deepskyblue;
 }
 
+
+
 .reactForm .reactContent{
   font-size: 20px;
   margin: 0;
@@ -49,8 +51,12 @@
   padding-top: 20px;
 }
 
-.reactForm .timepicker .reactTimePicker{
-
+.reactForm .timepicker .datePicker{
+  /* background-color: red; */
+  /* border: none; */
+  border: 1px solid red;
+  border-radius: 5px;
+  /* border-bottom: 2px solid deepskyblue; */
 }
 
 .reactForm .clearButtonCon {
